# meetcarla

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  requirements-transcription.txt  tauri-prd.md  vite.config.ts
.github/workflows/: release.yml
native-helper/: Package.swift
native-helper/Sources/CarlaNativeHelper/: main.swift
scripts/: transcription_runtime.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  ask_ai.rs  commands.rs  database.rs  detection.rs  exports.rs  helper.rs  lib.rs  main.rs  recording.rs  state.rs  summarization.rs  transcription.rs  types.rs  webhooks.rs
src/components/: CarlaLogo.tsx
src/lib/: api.ts  types.ts
