[package]
name = "carla-tauri"
version = "0.1.0"
description = "Carla local-first meeting recorder"
authors = ["Pascal"]
edition = "2021"

[lib]
name = "carla_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
directories = "6.0.0"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.4", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2.5.0"
tokio = { version = "1.47.1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.22.0"
